--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Available Rooms</h1>
     <ul>
-        <li><a href="room1.html">Room 1</a></li>
+        <li><a href="room1.html">Standard Single Room</a></li>
         <!-- Add other rooms as needed -->
     </ul>
 </body>
