--- a/room1.html
+++ b/room1.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room 1 Details</title>
+    <title>Standard Single Room</title>
+    <style>
+        /* Optional: Add some style for the images */
+        img {
+            width: 200px;
+            margin: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Room 1</h1>
-    <img src="https://drive.google.com/drive/folders/14fVEQDxS7SSnB6ALYAhkf6yv-NfTCYVl" alt="Room 1 Image">
-    <!-- Add more images as needed -->
+    <h1>Standard Single Room</h1>
+
+    <!-- Display all images from the folder -->
+    <img src="Hinh/1.Standardsingleroom/1.JPG" alt="Image 1">
+    <img src="Hinh/1.Standardsingleroom/2.JPG" alt="Image 2">
+    <!-- ... continue for all the images -->
+
     <p>Details about the room...</p>
+    <a href="index.html">Back to list</a>
 </body>
 </html>
