--- a/room1.html
+++ b/room1.html
@@ -16,8 +16,8 @@
     <h1>Standard Single Room</h1>
 
     <!-- Display all images from the folder -->
-    <img src="./Hình/1.Standardsingleroom/1.JPG" alt="Image 1">
-    <img src="./Hinh/1.Standardsingleroom/2.JPG" alt="Image 2">
+    <img src="/roomrental/Hình/1.Standardsingleroom/1.JPG" alt="Image 1">
+    <img src="/roomrental/Hình/1.Standardsingleroom/2.JPG" alt="Image 2">    
     <!-- ... continue for all the images -->
 
     <p>Details about the room...</p>
