--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rooms for Rent</title>
+    <title>Room Rentals</title>
+    <style>
+        img {
+            width: 100px; /* Thumbnail size */
+            margin: 5px;
+        }
+    </style>
 </head>
 <body>
     <h1>Available Rooms</h1>
-    <ul>
-        <li><a href="room1.html">Standard Single Room</a></li>
-        <!-- Add other rooms as needed -->
-    </ul>
+    <a href="room1.html">Standard Single Room</a>
+    <!-- Add other room links similarly -->
+
+    <script src="script.js"></script>
 </body>
 </html>
+
+
