--- a/room1.html
+++ b/room1.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Standard Single Room</title>
     <style>
-        /* Optional: Add some style for the images */
         img {
             width: 200px;
             margin: 5px;
@@ -14,13 +13,10 @@
 </head>
 <body>
     <h1>Standard Single Room</h1>
-
-    <!-- Display all images from the folder -->
-    <img src="/roomrental/Hình/1.Standardsingleroom/1.JPG" alt="Image 1">
-    <img src="/roomrental/Hình/1.Standardsingleroom/2.JPG" alt="Image 2">    
-    <!-- ... continue for all the images -->
-
+    <div id="room1-image-container"></div>
     <p>Details about the room...</p>
     <a href="index.html">Back to list</a>
+
+    <script src="script.js"></script>
 </body>
 </html>
